landing page changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </header>
       </div>
-      <img class="glow-block" src="images/glowblocksmall.png" alt="">
+      <!-- <img class="glow-block" src="images/glowblocksmall.png" alt=""> -->
       <img class="svgblur1" src="images/rupeeblur.svg" alt="" height="50" width="50" title="svg">
     <img class="svgblur2" src="images/rupeeblur.svg" alt="" height="70" width="70" title="svg">
     <img class="svgblur3" src="images/rupeeblur.svg" alt="" height="40" width="40" title="svg">
@@ -87,12 +87,12 @@
     
     <!-- LANDING PAGE BODY 1 -->
     <div class="landing ">
-      <div class="container-fluid col-xxl-8  py-4 maincard w-100">
+      <div class="container-fluid  maincard w-100">
             <div class="row flex-lg-row g-5 subcard" >
                 <div class="col-lg-6 titlecard py-5">
                     <div class="titles">
-                      <p class=" fw-bold text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</p>
-                      <p class=" fw-light text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</p>
+                      <p class="  text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</p>
+                      <p class="  text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</p>
                   </div>
                   <div class="btn btn-primary btn-lg horizon-button " >
                     Horizon 24' <img src="images/Double Alt Arrow Right.png" height="60" alt="">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="cardbox">
                   <div class="horizon-card d-flex flex-column align-items-start">
-                      <div class="heading ">
+                      <div class="heading">
                           <div>FCC, IIT Hyderabad</div>
                           <img class="horizon-logo" src="images/Group 3.svg" alt="" width="70" height="70">
                         </div>
@@ -128,7 +128,7 @@
       <div class="arrow">
           <img class="arrowsvg" src="images/Vector.svg" alt="" height="90%" width="90%">
       </div>
-    <h3 class=" mission fs-2 " >Our mission</h3>
+    <p class=" mission fs-2-sm" >Our mission</p>
     <div class="quote-text col-lg-6  ">
         <p class="quote-span q1">TO PROVE</p>
         <p class="quote-span q2">THAT <br></p>
@@ -154,7 +154,6 @@
     
   <!-- WHAT DO WE DO SECTION -->
   <div class="what-we-do py-4 my-4 container-fluid" id="what-we-do">
-    <div class="bg-grad-what"></div>
     <div class="what-heading ">
       <p>
         What Do We Do?
