--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
     <!-- YOUTUBE VIDEO EMBED -->
     <div class="yt py-4">
-      <iframe src="https://www.youtube.com/embed/cSs0gZnTUNU?autoplay=1&mute=1;loop=1&amp;rel=0&amp;" frameborder="10" width="100%" height="100%"></iframe>
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="./images/y2mate.com - Horizon23 Event Highlights  FCC  IIT Hyderabad _1080p.mp4">
+      </video>  
     </div>
   </div>
   
