--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -67,7 +67,7 @@
           <div class="offcanvas-lg bg-transparent offcanvas-end w-50 d-lg-none" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel"  data-bs-scroll="true">
             <div class="offcanvas-header d-flex justify-content-end bg-transparent d-lg-none">
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
-            </--------------------div>
+            </div>
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
                   <a href="../index.html" class="toggle-links">Home</a>
                   <a href="Sponsors.html" class="toggle-links "   style=" color: #70bdee;">Horizon</a>
