--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -229,7 +229,7 @@
 
   <script>
     $(".hor-button").click(function(){
-        window.open('Horizon.html' )
+        window.open('https://www.instagram.com/fcc_iith/' )
         return false;
     })
   </script>
