--- a/index.html
+++ b/index.html
@@ -101,20 +101,19 @@
                 <div class="cardbox">
                   <div class="horizon-card d-flex flex-column align-items-start">
                       <div class="heading">
-                          <div>FCC, IIT Hyderabad</div>
-                          <img class="horizon-logo" src="images/Group 3.svg" alt="" width="70" height="70">
+                          <div class="fs-4">FCC, IIT Hyderabad</div>
+                          <img class="horizon-logo " src="images/HoRiZoN-logo-second-draft.png" alt=""  width="60" height="50">
                         </div>
                       <div class="horizon-title">
                           <h1>Horizon</h1>
-                          <img src="images/wifi.svg" alt="" width="50" height="50">
+                          <!-- <img src="images/wifi.svg" alt="" width="50" height="50"> -->
                         </div>
                       <div class="timer w-100">
-                          <!-- <img src="images/timer.png" alt="" width="100%" height="90%"> -->
                           <div class="countdown-container ">
-                            <div class="days fs-3"><span id="days"> 00</span> <br><span>days</span></div>
-                            <div class="hours fs-3"><span id="hours"> 00</span> <br><span>hrs</span></div>
-                            <div class="minutes fs-3"><span id="minutes"> 00</span><br> <span>min</span></div>
-                            <div class="seconds fs-3"><span id="seconds"> 00</span> <br><span>sec</span></div>
+                            <div class="days fs-4"><span id="days"> 00</span> <br><span>days</span></div>
+                            <div class="hours fs-4"><span id="hours"> 00</span> <br><span>hrs</span></div>
+                            <div class="minutes fs-4"><span id="minutes"> 00</span><br> <span>min</span></div>
+                            <div class="seconds fs-4"><span id="seconds"> 00</span> <br><span>sec</span></div>
                           </div>
                       </div>
                   </div>
@@ -158,6 +157,8 @@
     
   <!-- WHAT DO WE DO SECTION -->
   <div class="what-we-do py-4 my-4 container-fluid" id="what-we-do">
+    
+    <div class="blue1 blue-noise"></div>
     <div class="what-heading ">
       <p>
         What Do We Do?
