--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Finance and Consulting Club IIT Hyderabad">
+    <meta name="googlebot" content="index,follow">
+    <meta title="FCC IIT Hyderabad">
+    <meta name="keywords" content="FCC IITH IIT HYDERABAD finance consulting club college  ">
     <link rel="shortcut icon" href="./images/fcc logo high res.png" type="image/x-icon">
     <!-- Bootstrap import link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
@@ -51,9 +55,9 @@
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
             <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light current-link"   style=" color: #70bdee;">Home <img src="images/etherium.png" alt=""></a></li>
             <li><a href="pages/Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
+            <li><a href="pages/Events.html" class="nav-link fs-5 head-navlink px-3 fw-light">Schedule</a></li>
             <li><a href="pages/Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="pages/Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
-            <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
           <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -69,9 +73,9 @@
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
                   <a href="index.html" class="toggle-links"   style=" color: #70bdee;">Home</a>
                   <a href="pages/Horizon.html" class="toggle-links">Horizon</a>
+                  <a href="pages/Events.html" class="toggle-links ">Schedule</a>
                   <a href="pages/Sponsors.html" class="toggle-links ">Sponsors</a>
                   <a href="pages/Team.html" class="toggle-links ">Team</a>
-                  <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
         </header>
@@ -189,7 +193,7 @@
         <div class="engage-grid-card card " id="grid-card3"><p>Decoding Quant</p></div>
         <div class="engage-grid-card card " id="grid-card4"><p>Industry Projects</p></div>
         <div class="engage-grid-card card " id="grid-card5"><p>Workshops</p></div>
-        <div class="engage-grid-card  card d-flex flex-column justify-content-center" id="grid-card6"><div class="w-100 text-center fs-2 x">Virtual</div><div class="w-100 text-center x">Trading</div><p class="w-100 x">Symposium</p></div>
+        <div class="engage-grid-card  card d-flex flex-column justify-content-center" id="grid-card6"><div class="w-100 text-center fs-1">Virtual</div><div class="w-100 text-center fs-1">Trading</div><p class="w-100 ">Symposium</p></div>
         <div class="engage-grid-card card " id="grid-card7"><p>Consulting 101</p></div>
         <div class="engage-grid-card card " id="grid-card8"><p>And Much More!!!</p></div>
       </div>
@@ -241,7 +245,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="pages/Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
             <li class="nav-item mb-2"><a href="pages/Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
-            <li class="nav-item mb-2"><a href="pages/Gallery.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
+            <li class="nav-item mb-2"><a href="pages/Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
             <li class="nav-item mb-2"><a href="#footer" class="nav-link p-0 text-body-light" target="_blank">Contact Us</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
           </ul>
@@ -253,7 +257,7 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Home</a></li>
             <li class="nav-item mb-2"><a href="pages/Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
             <li class="nav-item mb-2"><a href="pages/Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-            <li class="nav-item mb-2"><a href="pages/Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+            <li class="nav-item mb-2"><a href="pages/Events.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
           </ul>
         </div>
