--- a/pages/Comingsoon.html
+++ b/pages/Comingsoon.html
@@ -52,9 +52,9 @@
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
             <li><a href="../index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Home</a></li>
             <li><a href="Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
+            <li><a href="Events.html" class="nav-link fs-5 head-navlink px-3 fw-light">Schedule</a></li>        
             <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
-            <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
           <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -70,9 +70,9 @@
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
                   <a href="../index.html" class="toggle-links ">Home</a>
                   <a href="Horizon.html" class="toggle-links">Horizon</a>
+                  <a href="Events.html" class="toggle-links ">Schedule</a>
                   <a href="Sponsors.html" class="toggle-links ">Sponsors</a>
                   <a href="Team.html" class="toggle-links ">Team</a>
-                  <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
         </header>
@@ -107,7 +107,7 @@
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
-              <li class="nav-item mb-2"><a href="Gallery.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
               <li class="nav-item mb-2"><a href="#footer" class="nav-link p-0 text-body-light" target="_blank">Contact Us</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
@@ -119,7 +119,7 @@
               <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" >Workshops</a></li>
+              <li class="nav-item mb-2"><a href="Events.html" class="nav-link p-0 text-body-light" >Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
