--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -54,9 +54,9 @@
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
             <li><a href="../index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Home</a></li>
             <li><a href="Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
+            <li><a href="Events.html" class="nav-link fs-5 head-navlink px-3 fw-light">Schedule</a></li>        
             <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light current-link"   style=" color: #70bdee;">Sponsors  <img src="../images/etherium.png" alt=""></a></li>
             <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
-            <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
           <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -72,9 +72,9 @@
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
                   <a href="../index.html" class="toggle-links ">Home</a>
                   <a href="Horizon.html" class="toggle-links">Horizon</a>
+                  <a href="Events.html" class="toggle-links ">Schedule</a>
                   <a href="Sponsors.html" class="toggle-links "   style=" color: #70bdee;">Sponsors</a>
                   <a href="Team.html" class="toggle-links ">Team</a>
-                  <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
         </header>
@@ -95,14 +95,14 @@
       <div class="container-fluid sponsor-grid d-flex flex-column justify-content-evenly">
         <div class="row1 d-flex justify-content-evenly flex-wrap my-3">
           <div class="sponsor-card card-1 "><img src="../images/sponsors/abhibus-min.png" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-2 "><img src="../images/sponsors/decathalon-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-2 "><img src="../images/sponsors/mainspring-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-3 "><img src="../images/sponsors/stockgro-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-4 "><img src="../images/sponsors/finlarics-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-5 "><img src="../images/sponsors/monster-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-6 "><img src="../images/sponsors/product-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-7 "><img src="../images/sponsors/sid farm-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-8 "><img src="../images/sponsors/grabon-min.png" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-9 "><img src="../images/sponsors/plum-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-9 "><img src="../images/sponsors/plum (2)-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-10 "><img src="../images/sponsors/startupnews-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-11"><img src="../images/sponsors/edufabrica-min.png" width="90%" height="90%" alt=""></div>
           <div class="sponsor-card card-12 "><img src="../images/sponsors/easemytrip-min.png" width="90%" height="90%" alt=""></div>
@@ -129,7 +129,7 @@
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
-              <li class="nav-item mb-2"><a href="Gallery.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Contact Us</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
@@ -141,7 +141,7 @@
               <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="E.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
